# advent

./: .pre-commit-config.yaml  _pyproject.toml  dayone.py  project_setup  pyproject.toml  simplelang.py
1/: dayone.py
2/: daytwo.py  daytwo_part2.py  raaf
