[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100

[pycodestyle]
max-line-lenght = 120

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]

[tool.ruff.lint]
select = ["E", "UP", "I", "F", "C90", "B"]
